modified and added some code so the player cannot save placement if they didnt add all 5 ships

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id ="ship-pool">
         </div>
         <div id ="controls">
-            <button id ="save-button">Save Placement</button>
+            <button id="save-button" disabled>Save Placement</button>
             <button id ="start-button" disabled>Start Game</button>
         </div>
     </div>
