added code that changes the ship to horizontal or vertical

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div id ="controls">
             <button id="save-button" disabled>Save Placement</button>
             <button id ="start-button" disabled>Start Game</button>
+            <button id="rotate-button">Rotate Ship</button>
         </div>
     </div>
 
